--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <version>1.0.2</version>
         </dependency>-->
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
     </dependencies>
     <build>
