--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>studenttime-backend</finalName>
