email initial configuration

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.2.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>studenttime-backend</finalName>
